# organizacao-gem5

./: .envrc  .gitignore  README.md  chud  compile.sh  extract_stats.py  gem5_requirements.txt  good.txt  make_gmp.sh  requirements.txt  view_stats.ipynb
gem5/: Dockerfile
gem5/gmp/: Makefile  Makefile.in  aclocal.m4  config.h  config.in  config.m4  config.status  configure  configure~  gen-bases  gen-fac  gen-fib  gen-jacobitab  gen-psqr  gen-trialdivtab  libtool  ylwrap
gem5/gmp/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
gem5/gmp/cxx/: Makefile
gem5/gmp/demos/: Makefile
gem5/gmp/doc/: Makefile  mdate-sh
gem5/gmp/mpf/: Makefile  ceilfloor.lo  clears.lo  cmp_ui.lo  cmp_z.lo  div.lo  div_2exp.lo  div_ui.lo  eq.lo  fits_sint.lo  fits_slong.lo  fits_sshort.lo  get_d_2exp.lo  get_dfl_prec.lo  get_prc.lo  init.lo  inits.lo  int_p.lo  iset.lo  iset_d.lo  iset_str.lo  iset_ui.lo  libmpf.la  mul.lo  mul_ui.lo  reldiff.lo  set_dfl_prec.lo  set_prc.lo  sub.lo  (+8 more)
m5out/: config.ini  config.json
orgb_configs/systems/: system_manager.py
orgb_configs_orig/systems/: system_manager.py
run/: big_array.h
scripts/: install.bash  log.bash  run.bash  run_test_best_config.bash  util.bash
src/: CMakeLists.txt  CapitalVolumeI.txt  CapitalVolumeII.txt  CapitalVolumeIII.txt  beemovie.fodase  big_array.h  black.c  black.in.h  cha.c  cha.in.h  chud.c  chud.h  make_cha_data.py  make_data.py  make_data_black.py  makegem5experiment.py  makegem5test.py  radix.c
src/ext/include/: gmp.h
src/ext/lib/: libgmp.la  libgmp.so.10.3.0
src/ext/share/info/: gmp.info  gmp.info-1  gmp.info-2
src/find_cpu_config/: final.py  futypes.py  makegem5experiment.py  makegem5test.py  run_ga_optimization.py  sensitivity.py
(+391 files in other folders)
